Fixed spacing for challenge sponsor and Updated twitter link in problem statement page

--- a/css/style.css
+++ b/css/style.css
@@ -2993,7 +2993,7 @@ div.contactIcon a:hover svg path {
 
 .sponsors {
 	padding-top: 10%;
-	padding-bottom: 10%;
+	padding-bottom: 0%;
 	padding-left: 10%;
 	padding-right: 10%;
 }
